log
Wed 08 May 2024 02:39:01 AM UTC: 
 tests:  1|8
total_score: 0/70
137464f
Wed 08 May 2024 02:44:14 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
37cca62
Wed 08 May 2024 02:48:07 AM UTC: 
 treemap.c | 75 ++++++++++++++++++++++++++++++++++-----------------------------
 1 file changed, 41 insertions(+), 34 deletions(-)
 tests:  3|7
total_score: 5/70
5d3ebe4
Wed 08 May 2024 02:58:55 AM UTC: 
 treemap.c | 48 ++++++++++++++++++++----------------------------
 1 file changed, 20 insertions(+), 28 deletions(-)
 tests:  4|7
total_score: 5/70
557c728
Wed 08 May 2024 03:00:58 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4cf1478
Wed 08 May 2024 03:11:40 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ea3402
Wed 08 May 2024 03:11:53 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
0682f1b
Wed 08 May 2024 03:17:28 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5445787
Wed 08 May 2024 03:20:55 AM UTC: 
 treemap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  5|7
total_score: 5/70
e1b2e3d
Wed 08 May 2024 03:21:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
b28fd12
Wed 08 May 2024 03:23:03 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
0eb1b24
Wed 08 May 2024 03:52:14 AM UTC: 
 treemap.c | 28 +++++++++++++++++++++++-----
 1 file changed, 23 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
a167fbb
Wed 08 May 2024 03:57:38 AM UTC: 
 treemap.c | 31 ++++++++++++++++++-------------
 1 file changed, 18 insertions(+), 13 deletions(-)
 tests:  12|6
total_score: 15/70
96b48eb
Wed 08 May 2024 04:00:24 AM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
f33dfce
Wed 08 May 2024 04:01:08 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
f458ab4
